# integrate-photon-demo

photon-integration-demo/: CMakeLists.txt  demo.cpp
pwritev-atomic/: main.cpp
same-global-variable-in-different-shared-libs/: a.cpp  a.h  b.cpp  b.h  common.cpp  common.h  compile.sh  main.cpp
